/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

dependencies {

    testImplementation libs.junit.jupiter, libs.logback.classic, libs.assertj, libs.testcontainers.mongodb

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation libs.hibernate.orm.core, libs.mongodb.java.driver
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
